segment subnets using vlans. listen to DHCP requests on router subnets
