# pkg/api/v1/l2/l2.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // source: l2.proto
 
-package vpc_l2
+package l2
 
 import (
 	context "context"
@@ -52,31 +52,6 @@ func (LinkStatus) EnumDescriptor() ([]byte, []int) {
 	return fileDescriptor_f692411d37028fef, []int{0}
 }
 
-type NicRequest_NicType int32
-
-const (
-	NicRequest_TAP     NicRequest_NicType = 0
-	NicRequest_MACVTAP NicRequest_NicType = 1
-)
-
-var NicRequest_NicType_name = map[int32]string{
-	0: "TAP",
-	1: "MACVTAP",
-}
-
-var NicRequest_NicType_value = map[string]int32{
-	"TAP":     0,
-	"MACVTAP": 1,
-}
-
-func (x NicRequest_NicType) String() string {
-	return proto.EnumName(NicRequest_NicType_name, int32(x))
-}
-
-func (NicRequest_NicType) EnumDescriptor() ([]byte, []int) {
-	return fileDescriptor_f692411d37028fef, []int{5, 0}
-}
-
 type StackRequest struct {
 	VpcId                int32    `protobuf:"varint,1,opt,name=vpc_id,json=vpcId,proto3" json:"vpc_id,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
@@ -117,7 +92,7 @@ func (m *StackRequest) GetVpcId() int32 {
 }
 
 type Stack struct {
-	VpcID                int32    `protobuf:"varint,1,opt,name=vpcID,proto3" json:"vpcID,omitempty"`
+	VpcId                int32    `protobuf:"varint,1,opt,name=vpc_id,json=vpcId,proto3" json:"vpc_id,omitempty"`
 	BridgeLinkName       string   `protobuf:"bytes,2,opt,name=bridge_link_name,json=bridgeLinkName,proto3" json:"bridge_link_name,omitempty"`
 	BridgeLinkIndex      int32    `protobuf:"varint,3,opt,name=bridge_link_index,json=bridgeLinkIndex,proto3" json:"bridge_link_index,omitempty"`
 	VtepLinkName         string   `protobuf:"bytes,4,opt,name=vtep_link_name,json=vtepLinkName,proto3" json:"vtep_link_name,omitempty"`
@@ -152,9 +127,9 @@ func (m *Stack) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_Stack proto.InternalMessageInfo
 
-func (m *Stack) GetVpcID() int32 {
+func (m *Stack) GetVpcId() int32 {
 	if m != nil {
-		return m.VpcID
+		return m.VpcId
 	}
 	return 0
 }
@@ -337,12 +312,12 @@ func (m *StackChange) GetStatus() *StackStatusResponse {
 }
 
 type NicRequest struct {
-	VpcId                int32              `protobuf:"varint,1,opt,name=vpc_id,json=vpcId,proto3" json:"vpc_id,omitempty"`
-	Id                   string             `protobuf:"bytes,2,opt,name=id,proto3" json:"id,omitempty"`
-	Type                 NicRequest_NicType `protobuf:"varint,3,opt,name=type,proto3,enum=vpc.l2.NicRequest_NicType" json:"type,omitempty"`
-	XXX_NoUnkeyedLiteral struct{}           `json:"-"`
-	XXX_unrecognized     []byte             `json:"-"`
-	XXX_sizecache        int32              `json:"-"`
+	VpcId                int32    `protobuf:"varint,1,opt,name=vpc_id,json=vpcId,proto3" json:"vpc_id,omitempty"`
+	Id                   string   `protobuf:"bytes,2,opt,name=id,proto3" json:"id,omitempty"`
+	SubnetVlanId         uint32   `protobuf:"varint,3,opt,name=subnet_vlan_id,json=subnetVlanId,proto3" json:"subnet_vlan_id,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
 }
 
 func (m *NicRequest) Reset()         { *m = NicRequest{} }
@@ -384,11 +359,11 @@ func (m *NicRequest) GetId() string {
 	return ""
 }
 
-func (m *NicRequest) GetType() NicRequest_NicType {
+func (m *NicRequest) GetSubnetVlanId() uint32 {
 	if m != nil {
-		return m.Type
+		return m.SubnetVlanId
 	}
-	return NicRequest_TAP
+	return 0
 }
 
 type Nic struct {
@@ -397,6 +372,7 @@ type Nic struct {
 	Id                   string   `protobuf:"bytes,3,opt,name=id,proto3" json:"id,omitempty"`
 	Name                 string   `protobuf:"bytes,4,opt,name=name,proto3" json:"name,omitempty"`
 	Index                int32    `protobuf:"varint,5,opt,name=index,proto3" json:"index,omitempty"`
+	Vlan                 uint32   `protobuf:"varint,6,opt,name=vlan,proto3" json:"vlan,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -458,6 +434,13 @@ func (m *Nic) GetName() string {
 func (m *Nic) GetIndex() int32 {
 	if m != nil {
 		return m.Index
+	}
+	return 0
+}
+
+func (m *Nic) GetVlan() uint32 {
+	if m != nil {
+		return m.Vlan
 	}
 	return 0
 }
@@ -534,7 +517,6 @@ var xxx_messageInfo_Empty proto.InternalMessageInfo
 
 func init() {
 	proto.RegisterEnum("vpc.l2.LinkStatus", LinkStatus_name, LinkStatus_value)
-	proto.RegisterEnum("vpc.l2.NicRequest_NicType", NicRequest_NicType_name, NicRequest_NicType_value)
 	proto.RegisterType((*StackRequest)(nil), "vpc.l2.StackRequest")
 	proto.RegisterType((*Stack)(nil), "vpc.l2.Stack")
 	proto.RegisterType((*StackResponse)(nil), "vpc.l2.StackResponse")
@@ -549,44 +531,44 @@ func init() {
 func init() { proto.RegisterFile("l2.proto", fileDescriptor_f692411d37028fef) }
 
 var fileDescriptor_f692411d37028fef = []byte{
-	// 592 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0x41, 0x6f, 0xda, 0x4c,
-	0x10, 0xb5, 0x31, 0x36, 0x61, 0x9c, 0x10, 0x32, 0xf9, 0xf2, 0x29, 0xa5, 0x87, 0x46, 0xdb, 0x36,
-	0x4a, 0x89, 0x84, 0x2a, 0xa7, 0x3d, 0xf4, 0x54, 0x51, 0xa8, 0x22, 0x4b, 0xa9, 0x1b, 0x41, 0xda,
-	0x1c, 0x91, 0xe3, 0x5d, 0x85, 0x15, 0x60, 0x1c, 0xbc, 0xa1, 0xe5, 0xde, 0x3f, 0x96, 0x7f, 0x56,
-	0x79, 0x77, 0x01, 0x93, 0x50, 0x54, 0xf5, 0xe6, 0x99, 0x79, 0xfb, 0xe6, 0xbd, 0xd9, 0x59, 0xc3,
-	0xd6, 0xd0, 0x6b, 0x24, 0x93, 0xb1, 0x18, 0xa3, 0x33, 0x4d, 0xa2, 0xc6, 0xd0, 0x23, 0xaf, 0x61,
-	0xbb, 0x2b, 0xc2, 0x68, 0xd0, 0x61, 0x77, 0xf7, 0x2c, 0x15, 0x78, 0x00, 0x59, 0xa5, 0xc7, 0xe9,
-	0xa1, 0x79, 0x64, 0x9e, 0xd8, 0x1d, 0x7b, 0x9a, 0x44, 0x3e, 0x25, 0x0f, 0x26, 0xd8, 0x12, 0x87,
-	0xff, 0x81, 0x4c, 0xb5, 0xf3, 0xf5, 0x36, 0x9e, 0x40, 0xf5, 0x66, 0xc2, 0xe9, 0x2d, 0xeb, 0x0d,
-	0x79, 0x3c, 0xe8, 0xc5, 0xe1, 0x88, 0x1d, 0x16, 0x8e, 0xcc, 0x93, 0x72, 0xa7, 0xa2, 0xf2, 0x17,
-	0x3c, 0x1e, 0x04, 0xe1, 0x88, 0x61, 0x1d, 0xf6, 0xf2, 0x48, 0x1e, 0x53, 0xf6, 0xf3, 0xd0, 0x92,
-	0x5c, 0xbb, 0x4b, 0xa8, 0x9f, 0xa5, 0xf1, 0x15, 0x54, 0xa6, 0x82, 0x25, 0x39, 0xce, 0xa2, 0xe4,
-	0xdc, 0xce, 0xb2, 0x0b, 0xc6, 0x63, 0xd8, 0x5d, 0xa2, 0x14, 0x9f, 0x2d, 0xf9, 0x76, 0xe6, 0x30,
-	0xc9, 0x46, 0x38, 0xec, 0x68, 0xab, 0x69, 0x32, 0x8e, 0x53, 0x86, 0x2f, 0xc1, 0x4e, 0xb3, 0x84,
-	0xb4, 0xe2, 0x7a, 0x3b, 0x0d, 0x35, 0x93, 0x86, 0x42, 0xa9, 0x1a, 0x9e, 0x81, 0x93, 0x8a, 0x50,
-	0xdc, 0xa7, 0xd2, 0x8f, 0xeb, 0x3d, 0x5f, 0x41, 0x75, 0x65, 0x69, 0xce, 0xd8, 0xd1, 0x50, 0xc2,
-	0x61, 0x7f, 0x4d, 0x19, 0xeb, 0xe0, 0x28, 0x8b, 0xb2, 0x63, 0xc5, 0xc3, 0x39, 0x57, 0x26, 0x52,
-	0x63, 0x35, 0x02, 0x8f, 0xa1, 0x98, 0xc9, 0x97, 0x5d, 0xd7, 0x23, 0x65, 0x9d, 0xdc, 0x81, 0x2b,
-	0x5b, 0xb5, 0xfa, 0x61, 0x7c, 0xcb, 0xfe, 0x70, 0x7f, 0xf8, 0x3f, 0x38, 0x61, 0x24, 0xf8, 0x38,
-	0xd6, 0xb7, 0xa2, 0xa3, 0x9c, 0x3b, 0xeb, 0xef, 0xdd, 0xfd, 0x32, 0x01, 0x02, 0x1e, 0x6d, 0x5e,
-	0x19, 0xac, 0x40, 0x81, 0x53, 0xdd, 0xae, 0xc0, 0x29, 0x36, 0xa0, 0x28, 0x66, 0x09, 0x93, 0x8d,
-	0x2a, 0x5e, 0x6d, 0xde, 0x68, 0x49, 0x94, 0x7d, 0x5e, 0xcd, 0x12, 0xd6, 0x91, 0x38, 0xf2, 0x02,
-	0x4a, 0x3a, 0x81, 0x25, 0xb0, 0xae, 0x9a, 0x97, 0x55, 0x03, 0x5d, 0x28, 0x7d, 0x69, 0xb6, 0xbe,
-	0x67, 0x81, 0x49, 0x62, 0xb0, 0x02, 0x1e, 0x6d, 0x70, 0xdc, 0xff, 0x11, 0x52, 0x3a, 0x99, 0x3b,
-	0x56, 0x91, 0x96, 0x65, 0x2d, 0x64, 0x21, 0x14, 0x73, 0x9b, 0x25, 0xbf, 0xb3, 0x1d, 0xcf, 0xef,
-	0x91, 0x0a, 0xc8, 0x47, 0xd8, 0x0b, 0x78, 0xf4, 0xf4, 0x4a, 0xf5, 0x00, 0x37, 0x5c, 0xa9, 0x9e,
-	0x5b, 0x09, 0xec, 0xcf, 0xa3, 0x44, 0xcc, 0xea, 0xa7, 0x00, 0xcb, 0x32, 0x6e, 0x41, 0xb1, 0xfd,
-	0xf5, 0x3a, 0xa8, 0x1a, 0xe8, 0x40, 0xe1, 0xdb, 0x65, 0xd5, 0x94, 0x36, 0xfd, 0x6e, 0xd7, 0x0f,
-	0xce, 0xab, 0x05, 0xef, 0xc1, 0x82, 0xf2, 0x85, 0xd7, 0x65, 0x93, 0x29, 0x8f, 0x18, 0x7e, 0x80,
-	0xad, 0x26, 0xa5, 0xfa, 0x29, 0xae, 0x2e, 0xac, 0x9a, 0x62, 0xed, 0xe0, 0x51, 0x56, 0x09, 0x25,
-	0x46, 0x76, 0xf4, 0x9c, 0x89, 0x7f, 0x3a, 0xfa, 0x49, 0x2f, 0x99, 0x56, 0xbc, 0xfe, 0xf4, 0xa6,
-	0xdd, 0x21, 0x06, 0xbe, 0x03, 0xb7, 0xcd, 0x86, 0x4c, 0xb0, 0x4d, 0x0a, 0x16, 0x6f, 0x50, 0x0e,
-	0x8a, 0x18, 0xf8, 0x1e, 0xdc, 0xeb, 0x50, 0x44, 0x7d, 0x89, 0x4a, 0x71, 0xb5, 0x5e, 0xdb, 0x5f,
-	0x21, 0x51, 0x4f, 0x80, 0x18, 0x6f, 0x4d, 0x3c, 0x05, 0xa7, 0x49, 0x69, 0xe0, 0xb7, 0x10, 0x9f,
-	0x2e, 0x5a, 0xcd, 0xcd, 0xe5, 0x88, 0x81, 0x6f, 0xa0, 0xac, 0x94, 0x65, 0xf8, 0x7c, 0x6d, 0x9d,
-	0x9c, 0x72, 0xe0, 0xb7, 0xf4, 0x18, 0x56, 0xa0, 0xcf, 0x72, 0xc1, 0x63, 0xef, 0x37, 0x8e, 0xfc,
-	0xe9, 0x9e, 0xfd, 0x0e, 0x00, 0x00, 0xff, 0xff, 0xbf, 0x25, 0x63, 0xca, 0x80, 0x05, 0x00, 0x00,
+	// 587 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xdf, 0x6f, 0xd2, 0x50,
+	0x14, 0x6e, 0x0b, 0xed, 0xc6, 0x29, 0x30, 0x76, 0xb7, 0x19, 0xc4, 0x97, 0xe5, 0xaa, 0x0b, 0xb2,
+	0x84, 0x98, 0x4e, 0x1f, 0x7c, 0x32, 0x1b, 0x33, 0x4b, 0x93, 0x59, 0x0d, 0x44, 0x17, 0x7d, 0x21,
+	0xa5, 0xf7, 0x66, 0xdc, 0x50, 0x4a, 0x47, 0x2f, 0xa8, 0xaf, 0xfe, 0x67, 0xfa, 0x97, 0x99, 0xfb,
+	0x03, 0x28, 0x93, 0x11, 0xe3, 0x5b, 0xef, 0x39, 0xdf, 0xfd, 0xce, 0xf7, 0x9d, 0x73, 0x6e, 0x61,
+	0x37, 0xf6, 0xda, 0xe9, 0x74, 0xc2, 0x27, 0xc8, 0x99, 0xa7, 0x51, 0x3b, 0xf6, 0xf0, 0x73, 0x28,
+	0xf7, 0x78, 0x18, 0x8d, 0xba, 0xf4, 0x6e, 0x46, 0x33, 0x8e, 0x8e, 0x40, 0x64, 0xfa, 0x8c, 0xd4,
+	0xcd, 0x63, 0xb3, 0x69, 0x77, 0xed, 0x79, 0x1a, 0xf9, 0x04, 0xff, 0x36, 0xc1, 0x96, 0xb8, 0x07,
+	0x00, 0xa8, 0x09, 0xb5, 0xc1, 0x94, 0x91, 0x5b, 0xda, 0x8f, 0x59, 0x32, 0xea, 0x27, 0xe1, 0x98,
+	0xd6, 0xad, 0x63, 0xb3, 0x59, 0xea, 0x56, 0x55, 0xfc, 0x9a, 0x25, 0xa3, 0x20, 0x1c, 0x53, 0xd4,
+	0x82, 0xfd, 0x3c, 0x92, 0x25, 0x84, 0x7e, 0xaf, 0x17, 0x24, 0xd7, 0xde, 0x0a, 0xea, 0x8b, 0x30,
+	0x7a, 0x06, 0xd5, 0x39, 0xa7, 0x69, 0x8e, 0xb3, 0x28, 0x39, 0xcb, 0x22, 0xba, 0x64, 0x3c, 0x81,
+	0xbd, 0x15, 0x4a, 0xf1, 0xd9, 0x92, 0xaf, 0xb2, 0x80, 0x49, 0x36, 0xcc, 0xa0, 0xa2, 0xbd, 0x66,
+	0xe9, 0x24, 0xc9, 0x28, 0x7a, 0x0a, 0x76, 0x26, 0x02, 0xd2, 0x8a, 0xeb, 0x55, 0xda, 0xaa, 0x29,
+	0x6d, 0x85, 0x52, 0x39, 0x74, 0x06, 0x4e, 0xc6, 0x43, 0x3e, 0xcb, 0xa4, 0x1f, 0xd7, 0x7b, 0xb2,
+	0x86, 0xea, 0xc9, 0xd4, 0x82, 0xb1, 0xab, 0xa1, 0x98, 0xc1, 0xc1, 0x86, 0x34, 0x6a, 0x81, 0xa3,
+	0x2c, 0xca, 0x8a, 0x55, 0x0f, 0x2d, 0xb8, 0x84, 0x48, 0x8d, 0xd5, 0x08, 0x74, 0x02, 0x45, 0x21,
+	0x5f, 0x56, 0xdd, 0x8c, 0x94, 0x79, 0x7c, 0x07, 0xae, 0x2c, 0xd5, 0x19, 0x86, 0xc9, 0x2d, 0x7d,
+	0x68, 0x3e, 0x8f, 0xc0, 0x09, 0x23, 0xce, 0x26, 0x89, 0x9e, 0x8a, 0x3e, 0xe5, 0xdc, 0x15, 0xfe,
+	0xdd, 0xdd, 0x17, 0x80, 0x80, 0x45, 0xdb, 0x57, 0x06, 0x55, 0xc1, 0x62, 0x44, 0x57, 0xb3, 0x18,
+	0x11, 0xb3, 0xcc, 0x66, 0x83, 0x84, 0xf2, 0xfe, 0x3c, 0x0e, 0x13, 0x01, 0x17, 0x15, 0x2b, 0xdd,
+	0xb2, 0x8a, 0x7e, 0x8e, 0xc3, 0xc4, 0x27, 0xf8, 0xa7, 0x09, 0x85, 0x80, 0x45, 0x5b, 0x6c, 0x0c,
+	0xbf, 0x85, 0x84, 0x4c, 0x17, 0x36, 0xd4, 0x49, 0x17, 0x2b, 0x2c, 0x8b, 0x21, 0x28, 0xe6, 0xd6,
+	0x45, 0x7e, 0xa3, 0x43, 0xb0, 0xf3, 0xcb, 0xa1, 0x0e, 0x02, 0x29, 0xf4, 0xd4, 0x1d, 0x29, 0x46,
+	0x7e, 0xe3, 0xb7, 0xb0, 0x1f, 0xb0, 0xe8, 0xef, 0xd9, 0xe9, 0x4e, 0x6d, 0x99, 0x9d, 0x6e, 0xd0,
+	0x0e, 0xd8, 0xef, 0xc6, 0x29, 0xff, 0xd1, 0x3a, 0x05, 0x58, 0xa5, 0xd1, 0x2e, 0x14, 0x2f, 0x3f,
+	0xdc, 0x04, 0x35, 0x03, 0x39, 0x60, 0x7d, 0xfa, 0x58, 0x33, 0x91, 0x0b, 0x3b, 0xef, 0xfd, 0x5e,
+	0xcf, 0x0f, 0xae, 0x6a, 0x96, 0xf7, 0xab, 0x00, 0xa5, 0x6b, 0xaf, 0x47, 0xa7, 0x73, 0x16, 0x51,
+	0xf4, 0x06, 0x76, 0xcf, 0x09, 0x51, 0x8f, 0xee, 0x70, 0x7d, 0x33, 0x55, 0xe3, 0x1b, 0x47, 0xf7,
+	0xa2, 0x4a, 0x28, 0x36, 0xc4, 0xd5, 0x2b, 0xca, 0xff, 0xeb, 0xea, 0x85, 0xde, 0x26, 0xad, 0x78,
+	0xf3, 0xed, 0x6d, 0x4b, 0x82, 0x0d, 0xf4, 0x0a, 0xdc, 0x4b, 0x1a, 0x53, 0x4e, 0xb7, 0x29, 0x58,
+	0x3e, 0x36, 0xd9, 0x28, 0x6c, 0xa0, 0xd7, 0xe0, 0xde, 0x84, 0x3c, 0x1a, 0x4a, 0x54, 0x86, 0xd6,
+	0xf3, 0x8d, 0x83, 0x35, 0x12, 0xb5, 0xeb, 0xd8, 0x78, 0x69, 0xa2, 0x53, 0x70, 0xce, 0x09, 0x09,
+	0xfc, 0x0e, 0x5a, 0x0e, 0x64, 0xb5, 0x9b, 0x0d, 0x37, 0x17, 0xc3, 0x06, 0x7a, 0x01, 0x25, 0xa5,
+	0x4c, 0xe0, 0xf3, 0xb9, 0x4d, 0x72, 0x4a, 0x81, 0xdf, 0xd1, 0x6d, 0x58, 0x83, 0x3e, 0xce, 0x1d,
+	0xee, 0x7b, 0xbf, 0x28, 0x7e, 0xb5, 0x62, 0x6f, 0xe0, 0xc8, 0x9f, 0xec, 0xd9, 0x9f, 0x00, 0x00,
+	0x00, 0xff, 0xff, 0x81, 0x2b, 0x7f, 0xe9, 0x70, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
